# nautilus

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: api.rst  api_full.rst  api_high.rst  conf.py  index.rst  requirements.txt
docs/discussion/: convergence.rst  faqs.rst  nested_sampling.rst
docs/guides/: blobs.rst  checkpointing.rst  crash_course.rst  installation.rst  parallelization.rst  prior_distribution.rst  priors.rst  quickstart.rst
docs/source/: api.rst  conf.py  index.rst
docs/source/guides/: crash_course.rst  dynesty_users.rst  installation.rst  mcmc_users.rst  nested_sampling.rst  nested_sampling_users.rst  prior_distribution.rst
docs/source/tutorials/: crash_course.rst  dynesty_users.rst
nautilus/: __init__.py  bounds.py  neural.py  pool.py  prior.py  sampler.py
nautilus/bounds/: __init__.py  basic.py  mixture.py  nautilus.py  neural.py  periodic.py  union.py
nautilus/tests/: test_bounds.py  test_neural.py  test_prior.py
paper/: README.md  analyze.py  animation.py  compute.py  compute.sh  galaxy_likelihood.py  illustration.py  init.sh  requirements.txt  rosenbrock_emcee.sh
paper/benchmarks/: __init__.py  bolplanck.hdf5  california-planet-search.csv  galaxy_likelihood.py  hlsp_candels_hst_wfc3_goodss-tot-multiband_f160w_v1-1photom_cat.txt  wpcov_dr72_bright0_mr20.0_z0.106_nj400
paper/draft/: Makefile
paper/likelihoods/: analytic.py  cosmology.py  exoplanet.py  galaxy.py  wp_dr72_bright0_mr20.0_z0.106_nj400
paper/lux/: compute.sbatch  compute.sh  compute_rosenbrock_emcee.sbatch  init.sh  requirements.txt
paper/plots/: illustration.py
paper/results/: MD5SUM
tests/: test_blobs.py  test_bounds.py  test_io.py  test_neural.py  test_pool.py  test_prior.py  test_sampler.py
